--- a/src/main/resources/templates/addcustomer.html
+++ b/src/main/resources/templates/addcustomer.html
@@ -83,7 +83,7 @@
 										<a style="color: white;margin-right: 20px;" th:href="@{/customer/downloadTemple}">下载导入模板</a>
 										<input type="file"  name="file" class="form-control" style="padding: 10px;">
 									</div>
-									<input type="submit" value="新增客户" style="margin-left: 120px;" class="btn btn-info" />
+									<input type="submit" value="新增客户" style="margin-left: 120px;" class="btn btn-info urls" uri="customer/addCustomer" />
 								</form> 
 							</div>
 	
