--- a/src/main/resources/templates/NewMainOrder.html
+++ b/src/main/resources/templates/NewMainOrder.html
@@ -10,6 +10,17 @@
 		<link rel="stylesheet"  th:href="@{/css/fontawesome.min.css}">
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
 		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}" >
+		
+		<link rel="icon" th:href="@{/img1/favicon/favicon.html}" type="image/x-icon" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" th:href="@{/img1/favicon/apple-touch-icon-144x144-precomposed.html}">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" th:href="@{/img1/favicon/apple-touch-icon-72x72-precomposed.html}">
+		<link rel="apple-touch-icon-precomposed" th:href="@{/img1/favicon/apple-touch-icon-precomposed.html}">
+		<link rel="stylesheet" th:href="@{/css1/minified.css}">
+		<script th:src="@{/js1/modernizr.min.js}"></script>
+		<script th:src="@{/js1/jquery.min.js}"></script>
+		<link th:href="@{/css1/innerpage.css}" rel="stylesheet">
+		<link rel="stylesheet" th:href="@{/css1/responsive.css}">
+		
 	</head>
 	<style>
 		.box .status {
@@ -92,8 +103,7 @@
 		}
 		
 		.tm-block {
-			padding: 40px;
-			width: 975px;
+			padding: 30px;
 			-webkit-box-shadow: 1px 1px 5px 0 #455c71;
 			-moz-box-shadow: 1px 1px 5px 0 #455c71;
 			box-shadow: 1px 1px 5px 0 #455c71;
@@ -109,173 +119,73 @@
 			color: #99ff99;
 			margin-left: 10px;
 		}
+		 .table {
+		    width: 100%;
+		   	font-size:100%; 
+		} 
+		.table td{
+			height:57px;
+			line-height: 57px;
+		}
+		.table>tbody>tr>td,.table>tbody>tr>th {
+		    padding: 8px;
+		     line-height:0;
+		     vertical-align: middle;
+		    border-top: 1px solid #ddd;
+		}
 	</style>
-	<body id="reportsPage">
-		<div class="" id="home">
-			<div class="container">
-				<div class="row">
-					<div class="col-xl-9 col-lg-12 col-md-12 col-sm-12 mx-auto">
-						<div class="tm-bg-primary-dark tm-block tm-block-h-auto">
-							<div class="row">
-								<div class="col-12">
-									<h2 class="tm-block-title d-inline-block">客户信息</h2>
-								</div>
-							</div>
-							<div class="row">
-								<form class="form-inline">
-									<div class="form-group  col-md-6">
-										<label for="inputFirstname" class="col-md-4  col-lg-4 control-label ">账号:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.uname}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputLastname" class="col-md-4 col-lg-4 control-label ">年龄:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.age}">18</p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputAddress1" class="col-md-4 col-lg-4 control-label required">账户密码:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.upassword}">123456</p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputPhone" class="col-md-4 col-lg-4 control-label required">电话:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.phone}">1282323112</p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputFax" class="col-md-4 col-lg-4 control-label">性别:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.name1}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputCompany" class="col-md-4 col-lg-4 control-label">身高:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.height}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputPostcode" class="col-md-4 col-lg-4 control-label ">爱好:</label>
-										<div class="col-md-8 col-lg-8">
-											<p></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputAddress2" class="col-md-4 col-lg-4 control-label">体重:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.width}"></p>
-										</div>
-									</div>
-									<div class="form-group col-md-6">
-										<label for="inputCity" class="col-sm-4 col-lg-4 control-label ">出生日期:</label>
-										<div class="col-sm-8 col-lg-8">
-											<p th:text="${user.year}+年+${user.month}+月+${user.day}+日">1998年12月12日</p>
-										</div>
-									</div>
-									<div class="form-group col-md-6">
-										<label for="inputCity" class="col-sm-4 col-lg-4 control-label ">居住地址:</label>
-										<div class="col-sm-8 col-lg-8">
-											<p th:text="${user.address}">湖南 株洲市 XX区 XX街道 XXXXX XXX XXX</p>
-										</div>
-									</div>
-									<div class="space20 clearfix"></div>
-								</form>
-							</div>
-							<div class="row">
-								<div class="col-12">
-									<h2 class="tm-block-title d-inline-block">客户订单</h2>
-								</div>
-							</div>
-							<div class="row tm-content-row">
-								<div class="col-12 tm-block-col">
-									<div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-scroll" style="width: 100%;padding-top:0px;">
-										<table class="table">
-											<thead>
-												<tr>
-													<th scope="col">订单号</th>
-													<th scope="col">订单状态</th>
-													<th scope="col">订单生成时间</th>
-													<th scope="col">客户姓名</th>
-													<th scope="col">下单人</th>
-													<th scope="col">&nbsp;</th>	
-												</tr>
-											</thead>
-											<tbody>
-												<tr th:each="item:${list}">
-													<th scope="row"><b th:text="${item.orderno}"></b></th>
-													<td  th:text="${item.name1}">
-														<div class="tm-status-circle moving">
-														</div>
-													</td>
-													<td><b th:text="${#dates.format(item.ordertime, 'yyyy-MM-dd HH:mm:ss')}"></b></td>
-													<td><b th:text="${item.user.uname}"></b></td>
-													<td><b th:text="${item.staff.user.uname}"></b></td>
-													<td>
-														<input type="hidden" th:value="${item.id}">
-														<a  data-target="#orderInfo" data-toggle="modal" style="color: white;" class="fa fa-info tm-product-delete-link info"></a>
-													</td>
-												</tr>
-											</tbody>
-										</table>
-									</div>
-								</div>
-							</div>
-							<div class="modal fade bs-example-modal-lg" id="orderInfo" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
-								<div class="modal-dialog modal-lg" style="max-width: 80%;" role="document" > 
-									<div class="modal-content" style="background-color: #435c70;color: white;">
-										<div id="" class="modal-header">
-											订单详情
-										</div>
-										<div id="" class="modal-body">
-											<div class="box">
-											</div>	
-										</div>
-										<div id="" class="modal-footer">
-											<a class="btn btn-dark">提交</a>
-											<a class="btn btn-primary" data-dismiss="modal">关闭</a>
-										</div>
-									</div>
-								</div>
-							</div>
-						
-							<div class="row">
-								<div class="col-12">
-									<h2 class="tm-block-title d-inline-block">客户关怀</h2>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-12">
-									<form class="form-inline">
-										<div class="col-md-6 form-group">
-											<label for="inputPostcode" class="col-md-3 col-lg-4 control-label ">发送信息:</label>
-											<div class="col-md-9 col-lg-8">
-												<input type="text" class="form-control" />
-											</div>
-										</div>
-										<div class="col-md-6 form-group">
-											<input type="button" value="发送" class="btn btn-info" />
-										</div>
-									</form>
-								</div>
-							</div>
-						</div>
-					</div>
+<body>
+	<h4>订单管理</h4>
+	 <div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-scroll" style="width: 100%;margin-bottom: 20;">
+		<table class="table">
+			<thead>
+				<tr>
+					<th scope="col">订单号</th>
+					<th scope="col">订单状态</th>
+					<th scope="col">订单生成时间</th>
+					<th scope="col">客户姓名</th>
+					<th scope="col">&nbsp;</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="item:${list}">
+					<th scope="row"><b th:text="${item.orderno}"></b></th>
+					<td th:text="${item.name1}">
+						<div class="tm-status-circle moving"></div>
+					</td>
+					<td><b	th:text="${#dates.format(item.ordertime, 'yyyy-MM-dd HH:mm:ss')}"></b></td>
+					<td><b th:text="${item.user.uname}"></b></td>
+					<td><input type="hidden" th:value="${item.id}">
+					 <a data-target="#orderInfo" data-toggle="modal" style="color: white;"class="fa fa-info tm-product-delete-link info"></a></td>
+				</tr>
+			</tbody>				
+		</table>
+	</div> 
+	<div class="modal fade bs-example-modal-lg" id="orderInfo" style="width: 1000px;margin-top: 20px"	tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
+		<div class="modal-dialog modal-lg" style="margin:18px 40px;"	>
+			<div class="modal-content"	style="background-color: #435c70;width: 850px; color: white;">
+				<div id="" class="modal-header">订单详情</div>
+					<div id="" class="modal-body" style="max-height:350px;margin-bottom: 15px;overflow-y: auto;">
+					<div class="box"></div>
 				</div>
+				 <div id="" class="modal-footer">
+					<a class="btn btn-primary" data-dismiss="modal">关闭</a>
+				</div> 
 			</div>
 		</div>
-		<script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script>
+	</div>
+		
+</body>
+		<script th:src="@{/js1/minified.js}"></script>
+		<script th:src="@{/js1/products.js}"></script>
+		 <script type="text/javascript" th:src="@{/js/jquery-3.3.1.min.js}"></script> 
 
 		<script type="text/javascript">
 			//判断 是否已显示 如果显示 则取消显示      .panel-collapse in  显示
 			$(document).on("click", "[data-toggle='collase']", function() {
 				var href = $(this).attr("href");
 				href = href.substring(1, href.length);
-				if($("[id='" + href + "']").hasClass("panel-collapse in")) {
+				if ($("[id='" + href + "']").hasClass("panel-collapse in")) {
 					$("[id=" + href + "]").removeClass("panel-collapse in");
 					$("[id=" + href + "]").addClass("collapsed");
 					return;
@@ -309,7 +219,7 @@
 							$.each(data.user.orders,function(index1,item1){
 									$.each(item1.list,function(index2,item2){
 										if(item2.typeid==1||item2.typeid==5){
-											var divh2=$("<div class='content col-md-11'></div>");
+											var divh2=$("<div class='content '></div>");
 											var divhtable=$("<table class='table'><thead>"
 											+"<th scope='col'>项目名称</th>"
 											+"<th scope='col'>项目地点</th>"
@@ -366,7 +276,7 @@
 											div2=divh2;
 										}
 										if(item2.typeid==2){
-											var divs=$("<div class='content col-md-11'></div>")
+											var divs=$("<div class='content col-md-12'></div>")
 												var divtable=$("<table class='table'>"
 												    +"<thead>"
 													+"<th scope='col'>菜品名称</th>"
@@ -390,7 +300,7 @@
 												
 										}
 										if(item2.typeid==3){
-											var div=$("<div class='content col-md-11'></div>");
+											var div=$("<div class='content col-md-12'></div>");
 											var table=$("<table class='table'><thead><th scope='col'>房间名称</th><th scope='col'>房间价格</th><th scope='col'>房间类型</th><th scope='col'>房间状态</th></thead></table>");
 											var tbody=$("<tbody></tbody>");
 											var type="单人间";
@@ -440,7 +350,7 @@
 							$.each(item.orders,function(index1,item1){
 								$.each(item1.list,function(index2,item2){
 									if(item2.typeid==1||item2.typeid==5){
-										var divh2=$("<div class='content col-md-11'></div>");
+										var divh2=$("<div class='content col-md-12'></div>");
 										var divhtable=$("<table class='table'><thead>"
 										+"<th scope='col'>项目名称</th>"
 										+"<th scope='col'>项目地点</th>"
@@ -497,7 +407,7 @@
 										div2=divh2;
 									}
 									if(item2.typeid==2){
-										var divs=$("<div class='content col-md-11'></div>")
+										var divs=$("<div class='content col-md-12'></div>")
 											var divtable=$("<table class='table'>"
 											    +"<thead>"
 												+"<th scope='col'>菜品名称</th>"
@@ -522,7 +432,7 @@
 											div3=divs;
 									}
 									if(item2.typeid==3){
-										var div=$("<div class='content col-md-11'></div>");
+										var div=$("<div class='content col-md-12'></div>");
 										var table=$("<table class='table'><thead><th scope='col'>房间名称</th><th scope='col'>房间价格</th><th scope='col'>房间类型</th><th scope='col'>房间状态</th></thead></table>");
 										var tbody=$("<tbody></tbody>");
 										$.each(item2.list,function(item3,index3){
@@ -576,7 +486,6 @@
 		</script>
 		<script th:src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
 		<script th:src="@{/js/bootstrap.min.js}"></script>
-
-	</body>
+	
 
 </html>
