--- a/src/main/resources/templates/Person.html
+++ b/src/main/resources/templates/Person.html
@@ -196,13 +196,13 @@
 					
 					<div class="m-t-b clearfix">
 						<!-- SIDEBAR -->
-						<aside class="col-xs-12 col-sm-4 col-md-3">
+						<aside class="col-xs-12 col-sm-4 col-md-2">
 							<section class="side-section">
 								<h3 class="uppercase text-bold"><span class="text-xs">个人中心</span></h3>
 								<ul class="nav nav-tabs nav-stacked">
 									<li><a th:href="@{/customer/toPersonDetails}" target="ifr">个人信息</a></li>															
 									<li><a th:href="@{/customer/updateinfo}" target="ifr">修改个人信息</a></li>															
-									<li><a href="MainOrder.html" target="ifr">订单管理</a></li>
+									<li><a th:href="@{/customer/toOrders}" target="ifr">订单管理</a></li>
 								</ul>
 							</section>
 								
@@ -219,7 +219,7 @@
 							</div>
 							<!-- // PROMO -->
 						</aside>
-						<iframe name="ifr" class="col-xs-12 col-md-9" height="580" width="100%" th:src="@{/customer/toPersonDetails}">
+						<iframe name="ifr" class="col-xs-12 col-md-10" height="580" width="100%" th:src="@{/customer/toPersonDetails}">
 							
 							
 						</iframe>
