--- a/src/main/resources/templates/TeamDetails.html
+++ b/src/main/resources/templates/TeamDetails.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>客户详情</title>
+		<title>团队详情</title>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
 		<link rel="stylesheet"  th:href="@{/css/fontawesome.min.css}">
 		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
@@ -118,77 +118,7 @@
 						<div class="tm-bg-primary-dark tm-block tm-block-h-auto">
 							<div class="row">
 								<div class="col-12">
-									<h2 class="tm-block-title d-inline-block">客户信息</h2>
-								</div>
-							</div>
-							<div class="row">
-								<form class="form-inline">
-									<div class="form-group  col-md-6">
-										<label for="inputFirstname" class="col-md-4  col-lg-4 control-label ">账号:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.uname}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputLastname" class="col-md-4 col-lg-4 control-label ">年龄:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.age}">18</p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputAddress1" class="col-md-4 col-lg-4 control-label required">账户密码:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.upassword}">123456</p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputPhone" class="col-md-4 col-lg-4 control-label required">电话:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.phone}">1282323112</p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputFax" class="col-md-4 col-lg-4 control-label">性别:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.name1}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputCompany" class="col-md-4 col-lg-4 control-label">身高:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.height}"></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputPostcode" class="col-md-4 col-lg-4 control-label ">爱好:</label>
-										<div class="col-md-8 col-lg-8">
-											<p></p>
-										</div>
-									</div>
-									<div class="form-group  col-md-6">
-										<label for="inputAddress2" class="col-md-4 col-lg-4 control-label">体重:</label>
-										<div class="col-md-8 col-lg-8">
-											<p th:text="${user.width}"></p>
-										</div>
-									</div>
-									<div class="form-group col-md-6">
-										<label for="inputCity" class="col-sm-4 col-lg-4 control-label ">出生日期:</label>
-										<div class="col-sm-8 col-lg-8">
-											<p th:text="${user.year}+年+${user.month}+月+${user.day}+日">1998年12月12日</p>
-										</div>
-									</div>
-									<div class="form-group col-md-6">
-										<label for="inputCity" class="col-sm-4 col-lg-4 control-label ">居住地址:</label>
-										<div class="col-sm-8 col-lg-8">
-											<p th:text="${user.address}">湖南 株洲市 XX区 XX街道 XXXXX XXX XXX</p>
-										</div>
-									</div>
-									<div class="space20 clearfix"></div>
-								</form>
-							</div>
-							<div class="row">
-								<div class="col-12">
-									<h2 class="tm-block-title d-inline-block">客户订单</h2>
+									<h2 class="tm-block-title d-inline-block">团队订单</h2>
 								</div>
 							</div>
 							<div class="row tm-content-row">
