--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -68,7 +68,7 @@
 												<span th:text="${it.use.uname}" ></span>
 											</td>
 											<td>
-												<a th:href="@{/team/toTeamDetails(id=${it.id})}">查看</a>
+												<a th:href="@{/team/toTeamDetails(id=${it.id})}" class="urls" uri="team/toTeamDetails">查看</a>
 											</td>
 										</tr>
 									</tbody>
