--- a/src/main/resources/templates/addcustomer.html
+++ b/src/main/resources/templates/addcustomer.html
@@ -80,7 +80,7 @@
 									</div>
 									<div class="form-group col-md-12" style="display: none;">
 										<label for="" class="col-md-3">导入团员信息:</label>
-										<a style="color: white;margin-right: 20px;" th:href="@{/customer/downloadTemple}">下载导入模板</a>
+										<a style="color: white;margin-right: 20px;" th:href="@{/customer/downloadTemple}" class="urls" uri="customer/downloadTemple" >下载导入模板</a>
 										<input type="file"  name="file" class="form-control" style="padding: 10px;">
 									</div>
 									<input type="submit" value="新增客户" style="margin-left: 120px;" class="btn btn-info urls" uri="customer/addCustomer" />
