--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -44,7 +44,7 @@
 										<label>负责人名称: </label>
 										<input type="text" th:value="${uname}" name="uname" style="margin-left: 5px;" class="form-control" id="exampleInputName2" placeholder="负责人姓名">
 									</div>
-									<input type="submit" class="btn btn-info" value="查询">
+									<input type="submit" class="btn btn-info urls" value="查询" uri="team/toteam">
 								</form>
 							</div>
 							<div id="tab">
