4-26新增活动项目订单

--- a/src/main/resources/templates/insert_project.html
+++ b/src/main/resources/templates/insert_project.html
@@ -331,7 +331,7 @@
 					formData.append("mincrowd",$("[name=mincrowd]").val());
 					formData.append("maxcrowd",$("[name=maxcrowd]").val()); 
 					formData.append("name1",pj);
-					/* $.ajax({
+				    $.ajax({
 						url:"file",
 						type:"post",
 						data:formData,
@@ -342,7 +342,7 @@
 							console.log(123);
 							console.log(result);
 						}
-					});  */    
+					});      
 				}
 				 
 			})
