--- a/src/main/resources/templates/HotelAdd.html
+++ b/src/main/resources/templates/HotelAdd.html
@@ -87,23 +87,20 @@
                   </div>
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 mx-auto mb-4">
-                <div class="tm-product-img-dummy mx-auto">
-                  <i
-                    class="fas fa-cloud-upload-alt tm-upload-icon"
-                    onclick="document.getElementById('fileInput').click();"
-                  ></i>
+              	
+                <div id="imgadd">
+                	
                 </div>
                 <div class="custom-file mt-3 mb-3">
                   <input id="fileInput" type="file" multiple="multiple" style="display:none;" />
                   <input
+                  	id="sc"
                     type="button"
                     class="btn btn-primary btn-block mx-auto"
                     value="上传图片"
                     onclick="document.getElementById('fileInput').click();"
                   />
-                </div>
-                
-                
+                </div>  
               </div>
               <div class="col-12" style="margin-top: 20px;">
                 <input type="submit" class="btn btn-primary btn-block text-uppercase">
@@ -124,7 +121,43 @@
     <script src="@{/jquery-ui-datepicker/jquery-ui.min.js}"></script>
     <!-- https://jqueryui.com/download/ -->
     <script>
-     
+	    $(function(){
+	 		$("#sc").click(function(){
+	 			$("[type=file]").change(function(){
+	 				var formData = new FormData(); 
+					var fileArr;
+					$("[type=file]").each(function(i,obj){
+						fileArr = this.files;
+					})
+					if(fileArr.length>3){
+						alert("不好意思,最多选择三张图片");
+						return false; 
+					}
+					for(var i = 0;i < fileArr.length;i++){
+						formData.append("file",fileArr[i]);
+					}
+					$.ajax({
+						url:"/menu/fileadd",
+						type:"post",
+						data:formData,
+						processData:false,
+						contentType:false,
+						dataType:"json",
+						success:function(result){
+							$("#imgadd").html("");
+							$.each(result,function(i,obj){
+								var img=$("<img src='/"+obj.url+"' width='100' height='80'>")
+								var input=$("<input type='hidden' name='mlist["+i+"].url' value='/"+obj.url+"'>")
+								var input1=$("<input type='hidden' name='mlist["+i+"].typeid' value='3'>")
+								$("#imgadd").append(input);
+								$("#imgadd").append(input1);
+								$("#imgadd").append(img);
+							})
+						}
+					});
+	 			})
+	 		})
+	 	})
     </script>
   </body>
 </html>
