--- a/src/main/resources/templates/GoodManager.html
+++ b/src/main/resources/templates/GoodManager.html
@@ -50,7 +50,7 @@
 								<tbody>
 									<tr th:each="item,state : ${list}">
 										
-										<td><img th:if="${item.images!=null}" th:src="${item.images.url}" width="65px" height="65px" /></td>
+										<td><img th:if="${item.image!=null}" th:src="${item.image.url}" width="65px" height="65px" /></td>
 										<td class="tm-product-name"><a style="color: white;" th:href="@{/menu/toupdatemenu(id=${item.id})}" th:text="${item.mname}"></a></td>
 										<td th:text="${item.mtype.tname}"></td>
 										<td th:text="${item.price}"></td>
