--- a/src/main/resources/templates/access.html
+++ b/src/main/resources/templates/access.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www/thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>主页管理</title>
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}">
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 		<style>
 			.acsCheck{
 				display: inline-block;
@@ -71,134 +71,16 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
-						<div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-overflow">
-							<h2 class="tm-block-title">客户管理</h2>
-							<div class="tm-notification-items">
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
-						<div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-overflow">
-							<h2 class="tm-block-title">客户管理</h2>
-							<div class="tm-notification-items">
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 tm-block-col">
-						<div class="tm-bg-primary-dark tm-block tm-block-taller tm-block-overflow">
-							<h2 class="tm-block-title">客户管理</h2>
-							<div class="tm-notification-items">
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-								<div class="media tm-notification-item">
-									<input type="checkbox"  class="acsCheck">
-									<div class="media-body acsdiv">
-										<p class="mb-2">
-											新增客户
-										</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
 				<div style="margin: 0 auto;width: 50%;" class="row">
 					<button class="col-8 offset-2 btn btn-primary" >新增角色</button>
 				</div>
 			</div>
-			
 		</div>
-		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/moment.min.js"></script>
-		<script src="js/Chart.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/tooplate-scripts.js"></script>
+		<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+		<script th:src="@{/js/moment.min.js}"></script>
+		<script th:src="@{/js/Chart.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/tooplate-scripts.js}"></script>
 	</body>
 </html>
