--- a/src/main/resources/templates/dayChart.html
+++ b/src/main/resources/templates/dayChart.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www/thymeleaf.org">
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title>主页管理</title>
-		<link rel="stylesheet" href="css/fontawesome.min.css">
-		<link rel="stylesheet" href="css/bootstrap.min.css">
-		<link rel="stylesheet" href="css/templatemo-style.css">
+		<link rel="stylesheet" th:href="@{/css/fontawesome.min.css}">
+		<link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+		<link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 	</head>
 	<body id="reportsPage">
 		<div class="" id="home">
 			<div class="container">
 				<div class="row">
 					<div class="col">
-						<p class="text-white mt-5 mb-5">Welcome back, <b>Admin</b></p>
+						<p class="text-white mt-5 mb-5">Welcome back, <b th:text="${session.staff.user.uname}" th:if="${session.staff!=null}"></b></p>
 					</div>
 				</div>
 				<!-- row -->
@@ -73,11 +73,11 @@
 				
 			</div>
 		</div>
-		<script src="js/jquery-3.3.1.min.js"></script>
-		<script src="js/moment.min.js"></script>
-		<script src="js/Chart.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/tooplate-scripts-cy.js"></script>
+		<script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+		<script th:src="@{/js/moment.min.js}"></script>
+		<script th:src="@{/js/Chart.min.js}"></script>
+		<script th:src="@{/js/bootstrap.min.js}"></script>
+		<script th:src="@{/js/tooplate-scripts-cy.js}"></script>
 		<script>
 			Chart.defaults.global.defaultFontColor = 'white';
 			var newlinetitle = "客流量统计图"
@@ -110,10 +110,10 @@
 				pointRadius: 0
 			}];
 			var bartitle="项目收入统计图"
-			var newbarlables = ["项目一", "项目二", "项目三", "项目四", "项目五", "项目六", "项目七"];
+			var newbarlables = ["","项目一", "项目二", "项目三", "项目四", "项目五", "项目六", "项目七"];
 			var newbardatasets = [{
 				label: "项目收入统计",
-				data: [100, 140, 150, 120, 130, 140, 150],
+				data: [0,100, 140, 150, 120, 130, 140, 150],
 				backgroundColor: [
 					"#F7604D",
 					"#4ED6B8",
@@ -121,7 +121,8 @@
 					"#D7D768",
 					"#9D66CC",
 					"#DB9C3F",
-					"#3889FC",
+					"#dddddd",
+					"#ffffff"
 				],
 				borderWidth: 0
 			}];
