--- a/src/main/resources/templates/order.html
+++ b/src/main/resources/templates/order.html
@@ -143,7 +143,7 @@
 										<td><b th:text="${item.staff.user.uname}"></b></td>
 										<td>
 											<input type="hidden" th:value="${item.id}">
-											<a  data-target="#orderInfo" data-toggle="modal" style="color: white;" class="fa fa-info tm-product-delete-link info urls" uri="query"></a>
+											<a  data-target="#orderInfo" data-toggle="modal" style="color: white;" class="fa fa-info tm-product-delete-link info urls" uri="order/queryById"></a>
 										</td>
 									</tr>
 								</tbody>
