--- a/src/main/resources/templates/mode.html
+++ b/src/main/resources/templates/mode.html
@@ -104,7 +104,7 @@
 								<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 									<a class="dropdown-item" th:href="@{/accounts/query}" target="main">个人设置</a>
 									<a class="dropdown-item" href="salary.html" target="main">查看薪资</a>
-									<a class="dropdown-item" href="message.html" target="main">消息管理</a>
+									<a class="dropdown-item" th:href="@{/message/query}" target="main">消息管理</a>
 									<a class="dropdown-item" href="access.html" target="main">权限管理</a>
 									<a class="dropdown-item" href="JJ_set meal.html" target="main">套餐管理</a>
 
