--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -31,18 +31,18 @@
 				<div class="tm-block-col tm-col-account-settings">
 					<div class="tm-bg-primary-dark tm-block tm-block-settings">
 						<h2 class="tm-block-title">账号设置</h2>
-						<form action="" class="tm-signup-form row" th:each="item : ${list}">
+						<form action="/accounts/updateById" class="fo tm-signup-form row" th:each="item : ${list}">
 							<div class="form-group col-lg-6">
-								<label for="name">姓名</label> <input id="name" name="name"
+								<label for="uname">姓名</label> <input id="name" name="uname"
 									type="text" th:value="${item.ulist.uname}" class="form-control validate" />
 							</div>
 							<div class="form-group col-lg-6">
-								<label for="phone">电话</label> <input id="email" name="email"
+								<label for="phone">电话</label> <input id="email" name="phone"
 									type="text" th:value="${item.ulist.phone}" class="form-control validate" />
 							</div>
 							<div class="form-group col-lg-6">
 								<label for="password">密码</label> <input id="password"
-									name="password" type="password" class="form-control validate" />
+									name="upassword" type="password" class="form-control validate" />
 							</div>
 							<div class="form-group col-lg-6">
 								<label for="password2">确认密码</label> <input id="password2"
@@ -50,7 +50,7 @@
 							</div>
 							<div class="col-12">
 								<button type="submit"
-									class="btn btn-primary btn-block text-uppercase">更新账号
+									class="su btn btn-primary btn-block text-uppercase">更新账号
 								</button>
 							</div>
 						</form>
@@ -64,6 +64,9 @@
 	<!-- https://jquery.com/download/ -->
 	<script th:src="@{/js/bootstrap.min.js}"></script>
 	<!-- https://getbootstrap.com/ -->
+	<script type="text/javascript">
+		
+	</script>
 </body>
 
 </html>
