--- a/src/main/resources/templates/message.html
+++ b/src/main/resources/templates/message.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="UTF-8">
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>消息管理</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <link rel="stylesheet" href="css/fontawesome.min.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="stylesheet" th:href="@{/css/fontawesome.min.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/templatemo-style.css}">
 	<style>
 		table td{
 			overflow:hidden;white-space:nowrap;text-overflow:ellipsis;
@@ -98,11 +98,11 @@
 
     </div>
 
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/moment.min.js"></script>
-    <script src="js/Chart.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/tooplate-scripts.js"></script>
+    <script th:src="@{/js/jquery-3.3.1.min.js}"></script>
+    <script th:src="@{/js/moment.min.js}"></script>
+    <script th:src="@{/js/Chart.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/tooplate-scripts.js}"></script>
     <script>
     	$("body").on("click","table tr td:nth-of-type(2)",function(){
     		$(this).css("overflow","initial")
